--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.20.0",
     "bulma": "^0.9.0",
+    "bulma-calendar": "^6.0.9",
+    "bulma-extensions": "^6.2.7",
+    "connected-react-router": "^6.8.0",
     "firebase": "^7.19.0",
     "firebaseui": "^4.6.1",
+    "history": "^5.0.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-redux": "^7.2.1",
+    "react-redux-firebase": "^3.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux-firestore": "^0.13.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
